test/ui/tests/lowering/misplaced-attributes.lushui
;;; TEST fail check

@intrinsic
@intrinsic @Int32
use self.()

@intrinsic @abstract @(location "/")
use something.substantial.(root0 root1)

@include
binding: Binding =
    @intrinsic @Text make-binding @(public super) resource

data Manifest: Type of
    @public manifest

Platform: Type =
    case x of
        @static box => it
        \__ => unboxed
